# MCP-SERVER-FASTMCP

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt  users_data.json
api/: main.py
fastapi/: main.py
mcp-server/: client.py  client_new.py  server.py
